--- a/roso/redhat-registry-secret.yaml
+++ b/roso/redhat-registry-secret.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: openstack
 type: Opaque
 stringData:
-  registry_username: rh-ee-sryan
-  registry_password: Spread9220noise!
+  registry_username: <USERNAME>
+  registry_password: <PASSWORD>
