Describe your changes here

--- a/roso/dataplane_nodeset-3-nodes.yml
+++ b/roso/dataplane_nodeset-3-nodes.yml
@@ -20,7 +20,7 @@ spec:
     extraMounts:
       - volumes:
           - name: nova-migration-key
-            secrets:
+            secret:
               secretName: nova-migration-ssh-key
         mounts:
           - name: nova-migration-ssh-key
