--- a/roso/redhat-registry-secret.yaml
+++ b/roso/redhat-registry-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: redhat-registry
+  name: redhat-registry-secret
   namespace: openstack
 type: Opaque
 stringData:
