--- a/playbooks/create_ceph_pools.yml
+++ b/playbooks/create_ceph_pools.yml
@@ -84,14 +84,15 @@
       command: ceph osd pool set volumes_snap crush_rule hdd_rule
       when: hdd_osds_list | length > 0
 
-    - name: Add application to pools
-      command: ceph osd pool application enable {{ item }} rbd
-      when: hdd_osds_list | length > 0
-      loop:
-        - volumes
-        - images
-        - ssd_pool
-        - volumes_snap
-        - vms
+   - name: Add rbd application to pools
+     command: ceph osd pool application enable {{ item }} rbd
+     loop:
+       - volumes
+       - images
+       - ssd_pool
+       - volumes_snap
+       - vms
+     when: hdd_osds_list | length > 0
+
       
 
